--- a/Palidroma/index.html
+++ b/Palidroma/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindroma</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>La parola inserita è palindroma?</h1>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
