Pari e Dispari completato

--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pali e Dispari</title>
+    <title>PARI E DISPARI</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="title">PARI E DISPARI</h1>
+    
+        <div id="risultato" class="result-container"></div>
+
+    </div>
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
